--- a/Planmei/Planmei.Web.csproj
+++ b/Planmei/Planmei.Web.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -18,7 +18,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Planmei.Data\Planmei.Data.csproj" />
+    <ProjectReference Include="..\Planmei.Data\Planmei.Infrastructure.csproj" />
+    <ProjectReference Include="..\Planmei.Domain\Planmei.Domain.csproj" />
   </ItemGroup>
 
 </Project>
