Implement captcha validation

--- a/Planmei/appsettings.json
+++ b/Planmei/appsettings.json
@@ -12,5 +12,9 @@
   "Jwt": {
     "Key": "fb8f326ace2818c458ad47965d0deb2b",
     "Issuer": "PlanmeiApi"
+  },
+  "Captcha": {
+    "SecretKey": "6LcSs8MrAAAAAGYL6dAPkLBlO9ms-aN25sEGECca",
+    "BaseUrl": "https://www.google.com/recaptcha/api/siteverify"
   }
 }
