Implement send email

--- a/Planmei/appsettings.json
+++ b/Planmei/appsettings.json
@@ -16,5 +16,12 @@
   "Captcha": {
     "SecretKey": "6LcSs8MrAAAAAGYL6dAPkLBlO9ms-aN25sEGECca",
     "BaseUrl": "https://www.google.com/recaptcha/api/siteverify"
+  },
+  "Mailbox": {
+    "TestEmail": "planmeitest@getairmail.com",
+    "SmtpHost": "sandbox.smtp.mailtrap.io",
+    "SmtpPort": 587,
+    "SmtpUser": "646e9a64f33f25",
+    "SmtpPass": "06c7e15bbdf049"
   }
 }
