--- a/Planmei/appsettings.json
+++ b/Planmei/appsettings.json
@@ -10,11 +10,11 @@
     "DefaultConnection": "Server=VITORCASTELO;Database=PlanmeiDb;Trusted_Connection=True;MultipleActiveResultSets=true;Encrypt=True;TrustServerCertificate=True"
   },
   "Jwt": {
-    "Key": "fb8f326ace2818c458ad47965d0deb2b",
+    "Key": "",
     "Issuer": "PlanmeiApi"
   },
   "Captcha": {
-    "SecretKey": "6LcSs8MrAAAAAGYL6dAPkLBlO9ms-aN25sEGECca",
+    "SecretKey": "",
     "BaseUrl": "https://www.google.com/recaptcha/api/siteverify"
   },
   "Mailbox": {
@@ -22,6 +22,6 @@
     "SmtpHost": "sandbox.smtp.mailtrap.io",
     "SmtpPort": 587,
     "SmtpUser": "646e9a64f33f25",
-    "SmtpPass": "06c7e15bbdf049"
+    "SmtpPass": ""
   }
 }
