Change sensitive data to secrets.json

--- a/Planmei/appsettings.json
+++ b/Planmei/appsettings.json
@@ -21,7 +21,7 @@
     "TestEmail": "planmeitest@getairmail.com",
     "SmtpHost": "sandbox.smtp.mailtrap.io",
     "SmtpPort": 587,
-    "SmtpUser": "646e9a64f33f25",
+    "SmtpUser": "",
     "SmtpPass": ""
   }
 }
